--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(customCLib STATIC
             SDLTools/LTimer.cpp             
+            SDLTools/TextureHandler.cpp             
 )   
 
 target_include_directories( customCLib PUBLIC
